Fixed issue where scrollbar position does not change when switching between pages

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,10 +37,6 @@
   }
 }
 
-html {
-  overflow: scroll;
-}
-
 body {
   overscroll-behavior: none;
 }
